overlays/kimawesome/site/articles/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knowledge-hub-service
  labels:
    app: knowledge-hub
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: knowledge-hub
